--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,7 @@ MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/response-ready?r
 JWT_SECRET=your-super-secret-jwt-key-minimum-32-characters-change-in-production
 JWT_EXPIRES_IN=15m
 JWT_REFRESH_EXPIRES_IN=7d
+
+# Feature Flags
+# Enable or disable features that are in development
+NEXT_PUBLIC_ENABLE_VOICE_PRACTICE=false
