--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,6 @@ JWT_REFRESH_EXPIRES_IN=7d
 # Feature Flags
 # Enable or disable features that are in development
 NEXT_PUBLIC_ENABLE_VOICE_PRACTICE=false
+
+# Market Intelligence API (Optional - for Phase 2+)
+# RAPIDAPI_KEY=your-rapidapi-key-here
