--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ NEXT_PUBLIC_ELEVENLABS_AGENT_ID=your_agent_id_here
 
 # OpenAI Configuration (for AI Feedback)
 NEXT_PUBLIC_OPENAI_API_KEY=your_openai_api_key_here
+YOUTUBE_API_KEY=your_youtube_data_api_key_here
 
 # MongoDB Atlas Configuration
 MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/response-ready?retryWrites=true&w=majority
