Implement session timeout and idle detection for security
- Add idle timeout (default: 30 min) - auto logout after inactivity
- Add maximum session duration (default: 8 hours) - force re-auth
- Add warning system (default: 5 min before timeout) with user choice
- Track user activity (mouse, keyboard, scroll, touch, click)
- Show warning modal with countdown timer
- Allow users to extend session or logout
- Configurable via environment variables
- Integrate with AuthGuard for automatic tracking
- Add comprehensive documentation

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,14 @@ JWT_SECRET=your-super-secret-jwt-key-minimum-32-characters-change-in-production
 JWT_EXPIRES_IN=15m
 JWT_REFRESH_EXPIRES_IN=7d
 
+# Session Timeout Configuration (Optional)
+# Idle timeout: Logout after X minutes of inactivity (default: 30)
+NEXT_PUBLIC_IDLE_TIMEOUT_MINUTES=30
+# Max session duration: Force logout after X hours (default: 8)
+NEXT_PUBLIC_MAX_SESSION_HOURS=8
+# Warning before timeout: Show warning X minutes before logout (default: 5)
+NEXT_PUBLIC_WARNING_BEFORE_TIMEOUT_MINUTES=5
+
 # Feature Flags
 # Enable or disable features that are in development
 NEXT_PUBLIC_ENABLE_VOICE_PRACTICE=false
