Add feature flag to disable YouTube video link clicks
- Add NEXT_PUBLIC_ENABLE_YOUTUBE_LINKS feature flag (default: false)
- Keep video recommendations visible but disable link clicks
- Show 'Coming Soon' button text when links are disabled
- Update tip message to indicate links are coming soon
- Button is disabled with visual feedback (gray, cursor-not-allowed)
- Users can see the capability but cannot navigate to YouTube

--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,8 @@ NEXT_PUBLIC_WARNING_BEFORE_TIMEOUT_MINUTES=5
 # Feature Flags
 # Enable or disable features that are in development
 NEXT_PUBLIC_ENABLE_VOICE_PRACTICE=false
+# Enable YouTube video link clicks in recommendations (default: false - links visible but disabled)
+NEXT_PUBLIC_ENABLE_YOUTUBE_LINKS=false
 
 # Market Intelligence API (Optional - for Phase 2+)
 # RAPIDAPI_KEY=your-rapidapi-key-here
