--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build --webpack",
     "start": "next start",
     "lint": "eslint",
     "test": "jest",
@@ -13,7 +13,12 @@
     "test:ci": "jest --ci --coverage --maxWorkers=2",
     "migrate": "tsx scripts/migrate-direct.ts",
     "list-users": "tsx scripts/list-users.ts",
-    "create-admin": "tsx scripts/create-admin.ts"
+    "create-admin": "tsx scripts/create-admin.ts",
+    "deps:check": "npm outdated",
+    "deps:audit": "npm audit",
+    "deps:fix": "npm audit fix",
+    "deps:update": "npx npm-check-updates",
+    "deps:check-manual": "tsx scripts/check-dependencies.ts"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
@@ -31,6 +36,7 @@
     "mongoose": "^9.0.0",
     "next": "^16.0.7",
     "next-auth": "^5.0.0-beta.30",
+    "node-cache": "^5.1.2",
     "prisma": "^7.1.0",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
@@ -45,6 +51,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/jest": "^29.5.14",
     "@types/node": "^20",
+    "@types/node-cache": "^4.1.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "dotenv": "^17.2.3",
