Fix incomplete objections and convert docs to MDX format
- Fixed 2 incomplete objections:
  * 'What if my tenants don' → 'What if my tenants don't pay or don't move out?'
  * 'I a n d won't b a c k out?' → 'How do I know you won't back out?'
- Added audit script: scripts/fix-incomplete-objections.ts
- Converted all documentation from .md to .mdx format
- Updated README references to point to .mdx files
- Added objection fixes documentation

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "deps:audit": "npm audit",
     "deps:fix": "npm audit fix",
     "deps:update": "npx npm-check-updates",
-    "deps:check-manual": "tsx scripts/check-dependencies.ts"
+    "deps:check-manual": "tsx scripts/check-dependencies.ts",
+    "fix-objections": "tsx scripts/fix-incomplete-objections.ts"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
